// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform: matrix(1, 0.5, -0.5, 1, 10, 20): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: matrix(1, 0.5, -0.5, 1, 10, 20): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformMatrix, "::", "Matrix")(1, 0.5, -0.5, 1, 10, 20)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformMatrix, "::", "Matrix")(1, 0.5, -0.5, 1, 10, 20)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: perspective(1000px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: perspective(1000px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformPerspective, "::", "Perspective")(1000, UniCSSUnitType.PX)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformPerspective, "::", "Perspective")(1000, UniCSSUnitType.PX)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: rotate(30deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotate(30deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: rotate3d(1, 1, 1, 45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotate3d(1, 1, 1, 45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: rotateX(45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateX(45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatex")(45, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatex")(45, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: rotateY(60deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateY(60deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatey")(60, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatey")(60, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: rotateZ(90deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateZ(90deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatez")(90, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatez")(90, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: scale(1.2): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale(1.2): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: scale(1.2, 1.5): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale(1.2, 1.5): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE, 1.5, UniCSSUnitType.NONE)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE, 1.5, UniCSSUnitType.NONE)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: scale3d(1.2, 1.5, 1.0): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale3d(1.2, 1.5, 1.0): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(new UniCSSUnitValue(1.2, UniCSSUnitType.NONE), new UniCSSUnitValue(1.5, UniCSSUnitType.NONE), new UniCSSUnitValue(1, UniCSSUnitType.NONE))] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(new UniCSSUnitValue(1.2, UniCSSUnitType.NONE), new UniCSSUnitValue(1.5, UniCSSUnitType.NONE), new UniCSSUnitValue(1, UniCSSUnitType.NONE))] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: skew(15deg, 0deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skew(15deg, 0deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 0, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 0, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: skew(15deg, 30deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skew(15deg, 30deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 30, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 30, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: skewX(20deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skewX(20deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewx")(20, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewx")(20, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: skewY(25deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skewY(25deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewy")(25, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewy")(25, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformMatrix3D, "::", "Matrix3d")(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformMatrix3D, "::", "Matrix3d")(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: transform: skew(15deg, 30deg) skewX(20deg) skewY(25deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: transform: skew(15deg, 30deg) skewX(20deg) skewY(25deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewx")(20, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewy")(25, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewx")(20, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skewy")(25, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2) skew(15deg, 0deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2) skew(15deg, 0deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 0, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(15, UniCSSUnitType.DEG, 0, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(30, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, UniCSSUnitType.NONE)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(40, UniCSSUnitType.PX, 0, UniCSSUnitType.PX)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translate3d(40px, 0px, 10px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate3d(40px, 0px, 10px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX))] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX))] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translate3d(40px, 20px, 10px) scale3d(1.2, 1.5, 1.0) rotate3d(1, 1, 1, 45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate3d(40px, 20px, 10px) scale3d(1.2, 1.5, 1.0) rotate3d(1, 1, 1, 45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(new UniCSSUnitValue(1.2, UniCSSUnitType.NONE), new UniCSSUnitValue(1.5, UniCSSUnitType.NONE), new UniCSSUnitValue(1, UniCSSUnitType.NONE)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(new UniCSSUnitValue(1.2, UniCSSUnitType.NONE), new UniCSSUnitValue(1.5, UniCSSUnitType.NONE), new UniCSSUnitValue(1, UniCSSUnitType.NONE)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform: translateX(40px) translateY(20px) translateZ(10px) rotateX(45deg) rotateY(60deg) rotateZ(90deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translateX(40px) translateY(20px) translateZ(10px) rotateX(45deg) rotateY(60deg) rotateZ(90deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatex")(40, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatey")(20, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatez")(10, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatex")(45, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatey")(60, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatez")(90, UniCSSUnitType.DEG)] as UniCSSTransform[])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatex")(40, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatey")(20, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translatez")(10, UniCSSUnitType.PX), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatex")(45, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatey")(60, UniCSSUnitType.DEG), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotatez")(90, UniCSSUnitType.DEG)] as UniCSSTransform[]",
    },
  },
}
`;

exports[`transform-origin: 10px 20px 5px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 10px 20px 5px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(10, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(5, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(10, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(5, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 30px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 30px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(30, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(30, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(10, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(10, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 25% 75%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 25% 75%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(25, UniCSSUnitType.PCT), new UniCSSUnitValue(75, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(25, UniCSSUnitType.PCT), new UniCSSUnitValue(75, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PCT), new UniCSSUnitValue(15, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PCT), new UniCSSUnitValue(15, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 30%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: 50% 50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 50% 50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "bottom center 10%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: 10%",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: center center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: left center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: left top 60px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top 60px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: left top right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "left top right",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: right",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: right bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: top left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;
